--- a/java_epi/ch14/14.이진 탐색 트리.md
+++ b/java_epi/ch14/14.이진 탐색 트리.md
@@ -58,3 +58,96 @@ Java에서 흔히 사용되는 이진 탐색 트리 기반 자료구조는 TreeS
 TreeMap에 추가된 기능 중에서, floor(12)는 floorKey(12)와 비슷하고 headMap(28)은 hashSet(28)과 비슷하다.
 
 TreeSet과 TreeMap의 생성자는 키의 순서를 정하는 데 필요한 비교 객체를 명시적으로 지정할 수 있으므로, 이 구문에 익숙해져야 한다. (13장 앞부분에 비교 객체의 구문이 예제로 나와 있다.)
+
+## 문제 14.1 이진 트리가 이진 탐색 트리의 속성을 만족하는지 확인하기
+
+이진 트리가 입력으로 주어졌을 때 해당 트리가 이진 탐색 트리의 속성을 만족하는지 확인하는 프로그램을 작성하라.
+
+> 힌트: 각 노드에 대해서 해당 노드의 키가 왼쪽 자식의 키보다 크거나 작은지 확인하고 오른쪽 자식의 키보다 작거나 같은지 확인하는 게 맞는 걸까?
+
+직접적인 접근 방법은 먼저 이진 탐색 트리의 정의에 따라 루트에서 시작해서 루트의 왼쪽 부분 트리에서 가장 큰 키를 구하고 루트의 오른쪽 부분 트리에서 가장 작은 키를 구하는 것이다. 그다음 루트의 키가 왼쪽 부분 트리에서 가장 큰 키보다 크거나 같고 오른쪽 부분 트리에서 가장 작은 키보다 작거나 같은지 확인한다. 만약 두 조건을 모두 만족하면 루트의 왼쪽 부분 트리와 오른쪽 부분 트리를 재귀적으로 확인한다. 만약 하나라도 조건을 만족하지 않으면 false를 반환한다.
+
+이진 트리에서 가장 작은 키를 찾는 작업은 단순하다. 루트, 왼쪽 부분 트리, 오른쪽 부분 트리에 저장된 키 중에서 가장 작은 키를 찾으면 된다. 가장 큰 키를 찾는 작업도 비슷하다. 일반적인 이진 트리는 이진 탐색 트리의 속성을 만족하지 않을 수 있으므로 최솟값을 찾을 때는 부분 트리의 키를 모두 확인해야 한다.
+
+이 방법의 문제는 부분 트리를 반복해서 탐색한다는 점이다. 최악의 경우엔 한쪽으로 기울어져 있는 이진 탐색 트리의 경우에는 $O(n^2)$의 시간이 걸린다. 여기서 n은 노드의 개수이다. 캐시를 사용해서 각 노드에서 가장 작은 키와 가장 큰 키를 저장하고 있으면 $O(n)$ 시간으로 개선할 수 있다. 하지만 캐시를 사용하느라 $O(n)$의 추가 공간이 든다.
+
+트리의 높이가 h일 때, 시간 복잡도는 $O(n)$이고 공간 복잡도는 $O(h)$가 되는 두 가지 방법을 소개할 것이다.
+
+첫 번째 방법은 각 부분 트리에서 주어진 제약조건을 확인하는 것이다. 처음에는 루트에서 시작한다. 각 노드의 왼쪽(오른쪽) 부분 트리는 반드시 루트의 키보다 작거나 같아야(크거나 같아야) 한다. 이 사실을 일반화하면 다음과 같다. 트리에 있는 모든 노드의 키값 범위를 [l, u]라고 하고 루트의 키를 w라고 했을 때, w는 반드시 [l, u] 사이에 있어야 하고, 왼쪽 부분 트리는 [l, w] 사이에 있어야 하고, 오른쪽 부분 트리의 모든 키는 [w, u] 사이에 있어야 한다.
+
+예제를 살펴보자. 그림 14.1의 이진 탐색 트리에 적용해 보면, 처음 키의 범위는 [$-\infty$, $\infty$]이다. B를 루트로 하는 부분 트리를 재귀 호출하면 키의 범위가 [$-\infty$, 19]가 된다. 여기서 19는 A의 왼쪽 부분 트리가 가질 수 있는 키의 상한이 된다. F를 루트로 하는 부분 트리를 재귀 호출하면 키의 범위는 [7, 19]가 된다. K를 루트로 하는 부분 트리를 재귀 호출하면 키의 범위는 [23, 43]이 된다. 그림 9.1에 나와 있는 이진 트리는, 재귀 호출을 통해 C까지 내려가 보면 이진 탐색 트리가 아니라는 사실을 알 수 있다. C의 키의 범위는 [$-\infty$, 6]이지만 F의 키는 271이므로 이진 탐색 트리의 속성을 만족하지 못한다.
+
+```java
+public static boolean isBinaryTreeBST(BinaryTreeNode<Integer> tree) {
+    return areKeysInRange(tree, Integer.MIN_VALUE, Integer.MAX_VALUE);
+}
+
+private static boolean areKeysInRange(BinaryTreeNode<Integer> tree, Integer lower, Integer upper) {
+    if (tree == null) {
+        return true;
+    } else if (Integer.compare(tree.data, lower) < 0 || Integer.compare(tree.data, upper) > 0) {
+        return false;
+    }
+
+    return areKeysInRange(tree.left, lower, tree.data) &&
+           areKeysInRange(tree.right, tree.data, upper);
+}
+```
+
+시간 복잡도는 $O(n)$이고, 추가적인 공간 복잡도는 $O(h)$이다. h는 트리의 높이다.
+
+중위 순회를 사용하는 방법도 있다. 중위 순회는 키값을 정렬된 순서로 방문한다. 따라서 중위 순회의 결과가 정렬되어 있다면, 해당 이진 트리는 반드시 이진 탐색 트리이다. (이것은 이진 탐색 트리의 정의와 중위 순회의 정의를 그대로 따른다.) 따라서 중위 순회를 통해 가장 최근에 방문한 노드의 키를 저장함으로써 이진 탐색 트리의 속성을 확인할 수 있다. 새로운 노드를 방문할 때마다 바로 이전에 방문했던 키와 비교한다. 만약 이전에 방문한 키보다 현재 노드의 키가 크다면 이진 탐색 트리의 속성을 위반한 것이다.
+
+두 방법 모두 왼쪽 부분 트리를 먼저 순회한다. 따라서 이진 탐색 트리의 속성을 만족하지 않는 노드가 루트에 가까이 있다고 하더라도(예를 들어 오른쪽 자식의 키가 루트의 키보다 작은 경우), 시간 복잡도는 여전히 $O(n)$이 된다.
+
+너비 우선 탐색과 같은 방식으로 이진 탐색 트리의 속성을 위반하는 경우를 찾아보자. 이 방법은 이진 탐색 트리의 속성을 만족하지 않는 노드가 루트에 가까이 있는 경우를 보다 빠르게 찾을 수 있다.
+
+구체적으로, 큐에 인접한 노드와 해당 노드의 하한값과 상한값을 함께 삽입한다. 처음에는 큐에 루트 노드와 하한 $-\infty$와 상한 $\infty$를 함께 삽입한다. 반복적으로 각 노드에서 범위의 조건을 확인한다. 만약 해당 조건을 만족하지 않는 노드를 발견하면 탐색을 중지한다. 조건을 만족한 경우에는 자식 노드와 자식 노드의 하한을 함께 큐에 삽입한다.
+
+예를 들어 그림 14.1을 살펴보자. 큐에는 초깃값으로 (A, [$-\infty$, $\infty$])를 삽입한다. 매번 큐에서 노드를 꺼내고 조건을 확인한다. 첫 번째 엔트리 (A, [$-\infty$, $\infty$])를 꺼낸 뒤 A 노드의 자식 노드를 알맞은 범위와 함께 큐에 삽입한다. 예를 들면 (B, [$-\infty$, 19])와 (I, [19, $\infty$])다. 계속해서, (B, [$-\infty$, 19])의 노드를 꺼내서 자식 노드를 더한다. 즉, (C, [$-\infty$, 7])과 (D, [7, 19])를 삽입한다. 이 과정을 반복한다. 모든 노드가 조건을 만족하면 해당 트리는 이진 탐색 트리의 조건을 만족하게 된다.
+
+만약 특정 깊이에서 이진 탐색 트리의 속성을 만족하지 않는 부분 트리가 발견됐다면, 더 이상 깊이 들어가지 않아도 된다. 왜냐하면 각 노드의 키가 될 수 있는 하한과 상한을 가능한 아주 엄격하게 설정했기 때문이다. 해당 조건을 만족하지 않는 순간 해당 트리는 이진 탐색 트리의 속성을 만족하지 않게 된다.
+
+```java
+public static class QueueEntry {
+    public BinaryTreeNode<Integer> treeNode;
+    public Integer lowerBound, upperBound;
+
+    public QueueEntry(BinaryTreeNode<Integer> treeNode, Integer lowerBound, Integer upperBound) {
+        this.treeNode = treeNode;
+        this.lowerBound = lowerBound;
+        this.upperBound = upperBound;
+    }
+}
+```
+
+시간 복잡도는 $O(n)$이고, 추가적인 공간 복잡도는 $O(n)$이다.
+
+## 문제 14.2 이진 탐색 트리에서 주어진 값보다 큰 첫 번째 키 찾기
+
+이진 탐색 트리와 값 하나가 입력으로 주어졌을 때, 중위 순회의 결과 해당 값보다 큰 첫 번째 키를 반환하는 프로그램을 작성하라. 예를 들어 그림 14.1의 이진 탐색 트리와 입력값 23이 주어진다면 29를 반환해야 한다.
+
+> 힌트: 추가적인 상태를 유지하면서 이진 탐색을 수행하라.
+
+이진 탐색 트리의 노드가 n개일 때, 단순하게 중위 순회를 하면 $O(n)$ 시간에 해당 노드를 찾을 수 있다. 하지만 이 방법은 이진 탐색 트리의 속성을 사용하지 않았다.
+
+이보다 더 나은 접근법은 이진 탐색 트리의 탐색 특성을 사용하는 것이다. 가장 적합한 후보를 저장한 뒤 트리를 한 칸씩 내려가면서 해당 후보를 반복적으로 갱신한다. 부분 트리의 키와 입력값을 비교한 뒤 탐색하지 않아도 될 부분 트리를 제거해 나간다. 즉, 현재 부분 트리의 루트값이 입력값보다 작거나 같으면 오른쪽 부분 트리를 탐색한다. 만약 현재 부분 트리의 루트값이 입력값보다 크다면, 후보를 현재 루트로 갱신한 뒤 왼쪽 부분 트리를 탐색해 나간다. 우리가 원하는 결과는 현재 노드를 루트로 하는 트리 내에 반드시 존재해야 하기 때문에 이 알고리즘은 올바르게 동작한다.
+
+예를 들어 그림 14.1의 이진 탐색 트리에서 23보다 큰 첫 번째 노드를 찾아야 한다고 하면, A,I,J,K,L의 순서로 노드를 방문하게 될 것이다. L은 왼쪽 자식이 없고 이 노드의 키는 29이기 때문에 29가 결과가 된다.
+
+```java
+public static BSTNode<Integer> findFirstGreaterThanK(BSTNode<Integer> tree, Integer k) {
+    BSTNode<Integer> subtree = tree, firstSoFar = null;
+    while (subtree != null) {
+        if (subtree.data > k) {
+            firstSoFar = subtree;
+            subtree = subtree.left;
+        } else { // 루트와 왼쪽 부분 트리의 모든 키는 k보다 작거나 같으므로 이들은 건너뛴다.
+            subtree = subtree.right;
+        }
+    }
+    return firstSoFar;
+}
+```
+
+트리의 높이가 h일 때 시간 복잡도는 $O(h)$가 된다. 공간 복잡도는 $O(1)$이다.
