--- a/java_epi/ch14/14.이진 탐색 트리.md
+++ b/java_epi/ch14/14.이진 탐색 트리.md
@@ -151,3 +151,41 @@ public static BSTNode<Integer> findFirstGreaterThanK(BSTNode<Integer> tree, Inte
 ```
 
 트리의 높이가 h일 때 시간 복잡도는 $O(h)$가 된다. 공간 복잡도는 $O(1)$이다.
+
+## 문제 14.3 이진 탐색 트리에서 가장 큰 k개의 원소 찾기
+
+이진 탐색 트리는 정렬된 자료구조이므로 k번째로 큰 원소를 찾는 작업은 쉽다.
+
+이진 탐색 트리와 정수값 k가 입력으로 주어졌을 때, 이진 탐색 트리에서 가장 큰 k개의 원소를 반환하는 프로그램을 작성하라. 예를 들어 이진 탐색 트리가 그림 14.1로 입력되고 k = 3이면 (53,47,43)을 반환해야 한다.
+
+> 힌트: 중위 순회로 얻을 수 있는 결과는 무엇인가?
+
+무식한 방법으로 접근해 보자. 중위 순회를 통해 키를 오름차순으로 순회하면서 그중에서 마지막 k개의 키를 반환하면 된다. 큐를 사용하면 k번 이전에 방문했던 노드를 손쉽게 빼낼 수 있으므로, 방문한 노드를 저장할 때 사용하면 좋다. 하지만 이 방법은 불필요한 노드를 또한 처리한다는 단점이 있다. 예를 들어 k값이 작으면서 왼쪽 부분 트리가 큰 경우다.
+
+이보다 더 나은 방법은 원하는 노드에서 시작해서 거꾸로 찾아 나가는 방법이다. 먼저 가능한 오른쪽 부분 트리로 재귀적으로 내려간다. 만약 오른쪽 부분 트리가 존재하지 않는 경우에는 왼쪽 부분 트리로 내려간다. 이 방법은 거꾸로 중위 순회를 하는 것과 같다. 그림 14.1의 이진 탐색 트리를 거꾸로 중위 순회를 한다면 그 결과는 `<P,O,I,N,K,M,L,J,A,G,H,F,B,E,C,D>`가 된다.
+
+k개의 노드를 모두 방문한 순간 순회를 중단한다. 다음은 찾고자 하는 키를 동적 배열에 저장하는 코드이다. 배열의 원소가 k개가 되는 수간 해당 배열을 반환한다. 문제에 나와 있는 대로 새롭게 방문하는 노드를 배열의 끝에 저장한다.
+
+```java
+public static List<Integer> findKLargestInBST(BSTNode<Integer> tree, int k) {
+    List<Integer> kLargestElements = new ArrayList<>();
+    findKLargestInBSTHelper(tree, k, kLargestElements);
+    return kLargestElements;
+}
+
+private static void findKLargestInBSTHelper(BSTNode<Integer> tree, int k, List<Integer> kLargestElements) {
+    // 중위 순회를 거꾸로 순회한다.
+    if (tree != null && kLargestElements.size() < k) {
+        findKLargestInBSTHelper(tree.right, k, kLargestElements);
+        if (kLargestElements.size() < k) {
+            kLargestElements.add(tree.data);
+            findKLargestInBSTHelper(tree.left, k, kLargestElements);
+        }
+    }
+}
+```
+
+그림 14.1에서 가장 큰 5개의 키를 찾고자 할 때, 먼저 재귀적으로 A,I,O,P를 순서대로 방문한다. 그 다음에 P,O,I의 순서대로 방문하고 이들을 결과에 추가한다. 그리고 재귀적으로 J,K,N을 순서대로 방문한다. 마지막에 N과 K를 방문한 순간 이들을 결과에 저장한다. 배열에 저장한 키가 다섯 개가 되었으므로 순회를 중단한다.
+
+시간 복잡도는 $O(h + k)$이다. 이는 트리가 균형 잡혀 있고 k가 작은 경우에 일반적인 중위 순회보다 더 빠르다. 복잡도의 상한은 다음과 같이 구할 수 있다. 이 프로그램은 많아야 h번 트리를 내려가고, 그 횟수는 적어도 트리를 다시 올라가는 횟수보다 많다. 또한 결과에 추가할 노드를 방문을 한 뒤에야 트리를 다시 올라간다. k개의 노드를 결과에 넣은 뒤에는 프로그램이 종료된다.
+
