--- a/java_epi/ch15/15.재귀.md
+++ b/java_epi/ch15/15.재귀.md
@@ -438,3 +438,83 @@ public static List<BinaryTreeNode<Integer>> generateAllBinaryTrees(int numNodes)
 ```
 
 재귀 함수에 대한 $C(n)$의 호출 수는 $C(n) = \sum^{n}_{i=1} C(n - i)C(i - 1)$을 만족한다. $C(n)$을 n번째 카탈란 수(Catalan number)라 한다. 이 값은 $\frac{(2n)!}{n!(n+1)!}$과 같다고 알려져 있다. 문제 15.6의 해법과 비교해 보면 값이 상당히 비슷한 것을 알 수 있다. 카탈란 수는 조합 문제에 자주 등장한다.
+
+## 문제 15.9 스도쿠 해법 구현하기
+
+스도쿠를 푸는 코드를 구현하라. 문제 5.17의 해법에서 스도쿠의 정의에 대해 살펴보라.
+
+> 힌트: 무식한 방법의 속도를 개선하기 위해 제약조건을 추가해 보라.
+
+무식한 방법은 비어 있는 칸에 모든 가능한 숫자를 대입해 본 뒤 문제 5.17의 해법을 통해 스도쿠의 조건을 만족하는지 확인해 보는 것이다. 하지만 대입한 어떤 값이 스도쿠 조건을 위반했을 때는 더 이상 진행할 필요가 없으므로, 모든 숫자를 대입하는 것은 낭비가 심하다. 따라서 백트래킹(back tracking)의 원리를 적용해야 한다.
+
+구체적으로, 2차원 배열을 한번에 하나씩 순회한다. 만약 비어 있는 칸을 발견한다면, 숫자를 하나씩 대입해 보면서 스도쿠의 제약조건을 위반하는지 확인한다. 제약조건을 위반하지 않는다면 재귀적으로 다음 칸에 숫자를 대입해 본다. 만약 비어 있는 칸을 모두 채웠다면 탐색에 성공한 것이다. 스도쿠의 조건을 만족하는지 확인하는 단순한 방법은 문제 5.17의 해법을 호출해 보는 것이다. 하지만 이미 조건을 만족하는 숫자만을 대입해 본다면 수행 시간을 상당히 단축시킬 수 있다. 다시 말하면, 추가된 항목의 행, 열, 부분 사각형만 확인하는 것이다.
+
+예를 들어 그림 5.2(a)의 판에서 왼쪽 아래부터 시작한다고 가정하자. 1을 빈칸에 채워도 행, 열, 부분 사각형 어느 것도 스도쿠의 조건에 위반하지 않으므로 같은 행에서 그 다음 칸으로 넘어간다. 같은 행에 이미 존재하므로 1은 안 되지만, 2는 가능하다.
+
+```java
+private static final int EMPTY_ENTRY = 0;
+
+public static boolean solveSudoku(List<List<Integer>> partialAssignment) {
+    return solvePartialSudoku(0, 0, partialAssignment);
+}
+
+private static boolean solvePartialSudoku(int i, int j, List<List<Integer>> partialAssignment) {
+    if (i == partialAssignment.size()) {
+        i = 0; // 새로운 행에서 시작한다.
+        if (++j == partialAssignment.get(i).size()) {
+            return true; // 행렬의 모든 칸을 올바르게 채웠다.
+        }
+    }
+
+    // 빈칸이 아닌 곳은 넘어간다.
+    if (partialAssignment.get(i).get(j) != EMPTY_ENTRY) {
+        return solvePartialSudoku(i + 1, j, partialAssignment);
+    }
+
+    for (int val = 1; val <= partialAssignment.size(); ++val) {
+        // (i, j)에 해당 값을 채운 다음에 그 결과가 유효한지 확인하는 것보다
+        // 해당 값을 채우기 전에 스도쿠의 제약조건을 모두 만족하는지 확인하는 게 더 빠르다.
+        // 왜냐하면 이미 주어진 환경운 제약조건을 위반하지 않으므로,
+        // 문제가 발생할 수 있는 부분은 (i, j)뿐이기 때문이다.
+        if (validToAddVal(partialAssignment, i, j, val)) {
+            partialAssignment.get(i).set(j, val);
+            if (solvePartialSudoku(i + 1, j, partialAssignment)) {
+                return true;
+            }
+        }
+    }
+
+    partialAssignment.get(i).set(j, EMPTY_ENTRY); // Undo assignment
+    return false;
+}
+
+private static boolean validToAddVal(List<List<Integer>> partialAssignment, int i, int j, int val) {
+    // 행의 제약조건을 확인한다.
+    for (List<Integer> element : partialAssignment) {
+        if (val == element.get(j)) {
+            return false;
+        }
+    }
+
+    // 열의 제약조건을 확인한다.
+    for (int k = 0; k < partialAssignment.size(); k++) {
+        if (val == partialAssignment.get(i).get(k)) {
+            return false;
+        }
+    }
+
+    // 부분 사각형의 제약조건을 확인한다.
+    int regionSize = (int)Math.sqrt(partialAssignment.size());
+    int I = i / regionSize, J = j / regionSize;
+    for (int a = 0; a < regionSize; a++) {
+        for (int b = 0; b < regionSize; b++) {
+            if (val == partialAssignment.get(regionSize * I + a).get(regionSize * J + b)) {
+                return false;
+            }
+        }
+    }
+    return true;
+}
+```
+
+프로그램이 $9 \times 9$의 판에 한정되어 있으므로, 크기를 나타내는 입력값이 없다. 그러므로 시간 복잡도를 말하기 애매하다. 하지만 스도쿠를 $n \times n$의 크기로 일반화시키면 NP-안전(NP-complete) 문제가 된다. 일반적인 $n \times n$ 크기에서 스도쿠를 푸는 알고리즘이 지수 시간 복잡도라는 사실을 증명하는 건 어렵지 않다.
