--- a/java_epi/ch15/15.재귀.md
+++ b/java_epi/ch15/15.재귀.md
@@ -518,3 +518,74 @@ private static boolean validToAddVal(List<List<Integer>> partialAssignment, int 
 ```
 
 프로그램이 $9 \times 9$의 판에 한정되어 있으므로, 크기를 나타내는 입력값이 없다. 그러므로 시간 복잡도를 말하기 애매하다. 하지만 스도쿠를 $n \times n$의 크기로 일반화시키면 NP-안전(NP-complete) 문제가 된다. 일반적인 $n \times n$ 크기에서 스도쿠를 푸는 알고리즘이 지수 시간 복잡도라는 사실을 증명하는 건 어렵지 않다.
+
+## 문제 15.10 그레이 코드 구하기
+
+n-비트 그레이 코드란 {0,1,2,...,$2^n-1$}로 이루어진 순열 중에서 연속된 두 숫자의 비트가 오직 하나만 다른 순열을 말한다.(또한 처음 숫자와 마지막 숫자도 비트 하나만 달라야 한다.) 예를 들어 <$(000)_2$,$(100)_2$,$(110)_2$,$(111)_2$,$(110)_2$,$(010)_2$,$(011)_2$,$(001)_2$> = <0,4,5,7,6,2,3,1>과 <0,1,3,2,6,7,5,4>는 n=3일 때의 그레이 코드이다.
+
+n이 입력으로 주어졌을 때 n-비트의 그레이 코드를 반환하는 프로그램을 작성하라.
+
+> 힌트: n=2,3,4인 경우의 그레이 코드를 구해 보라.
+
+무식한 방법은 길이가 n비트로 이루어진 정수 $2^n$개를 나열하는 방법이다. 그리고 나열된 수열이 그레이 코드인지 확인한 뒤, 그레이 코드가 맞다면 바로 멈춘다. 시간 복잡도는 $2^{n\times2^n}$으로 천문학적이다. 이를 조금 더 개선할 수는 있다. 수열 내에서 각 엔트리는 중복이 없어야 하므로 0,1,2,...,$2^n-1$의 순열을 구하면 된다. 하지만 여전히 비효율적이다.
+
+수열을 직접적으로 나열하면 좀 더 빠르게 할 수 있다. 즉, 이전 수열에서 딱 한 개의 비트만 다른 숫자를 찾아서 점차적으로 수열을 만들어 나가면 된다. (제일 마지막에는, 첫 번째 숫자와도 비트가 하나만 다른지 비교를 해야 한다.) 예를 들어 n=4인 경우에 $(0000)_2$로 시작한다. 그 뒤에 $(0000)_2$에서 비트를 하나씩 바꿔보면서 수열에 추가하지 않았던 숫자를 찾는다. 그렇게 $(0001)_2$을 수열에 추가한다. 이제 $(0001)_2$의 비트를 하나씩 바꿔본다. $(0000)_2$은 이미 수열에 있는 숫자이므로 넘어간다. 그렇게 $(0011)_2$을 수열에 추가하면, 현재 수열은 <$(0000)_2$,$(0001)_2$,$(0011)_2$>이 된다. 이와 같은 방법으로 다음에 추가되는 숫자는 <$(0010)_2$,$(0110)_2$,$(0111)_2$>이다.
+
+```java
+public static List<Integer> grayCode(int numBits)  {
+    List<Integer> result = new ArrayList<>(Arrays.asList(0));
+    directedGrayCode(numBits, new HashSet<Integer>(Arrasy.asList(0)), result);
+}
+
+private static boolean directedGrayCode(int numBits, Set<Integer> history, List<Integer> result) {
+    if (result.size() == (1 << numBits)) {
+        return differsByOneBit(result.get(0), result.get(result.size() - 1));
+    }
+
+    for (int i = 0; i < numBits; i++) {
+        int previousCode = result.get(result.size() - 1);
+        int candidateNextCode = previousCode ^ (1 << i);
+        if (!history.contains(candidateNextCode)) {
+            history.add(candidateNextCode);
+            result.add(candidateNextCode);
+            if (directedGrayCode(numBits, history, result)) {
+                return true;
+            }
+            history.remove(candidateNextCode);
+            result.remove(result.size() - 1);
+        }
+    }
+    return false;
+}
+
+private static boolean differsByOneBit(int x, int y) {
+    int bitDifference = x ^ y;
+    return bitDifference != 0 && (bitDifference & (bitDifference - 1)) == 0;
+}
+```
+
+좀 더 분석적인 해법을 소개한다. 작은 입력으로 케이스 분석을 하다 보면 어떤 영감을 얻을 수 있다. <$(00)_2$,$(01)_2$,$(11)_2$,$(10)_2$>은 2비트 그레이 코드이다. n=3의 그레이 코드를 구할 때 단순히 <$(00)_2$,$(01)_2$,$(11)_2$,$(10)_2$>의 앞에 1 혹은 1을 덧붙인 뒤 이들을 이어 붙이면 된다. 이들을 단순히 이어 붙이면 $(010)_2$ 다음에 $(100)_2$이 되므로 그레이 코드의 속성을 만족하지 못한다. 하지만 이 외의 나머지 모든 부분에서는 그레이 코드의 속성을 만족한다.
+
+그레이 코드는 비트 하나만 달라야 하므로 <$(00)_2$,$(01)_2$,$(11)_2$,$(10)_2$>을 역순으로 배열한 뒤 1을 앞에 덧붙이면 문제를 해결할 수 있다. 예를 들어 n=3의 수열은 <$(000)_2$,$(001)_2$,$(011)_2$,$(010)_2$,$(110)_2$,$(111)_2$,$(101)_2$,$(100)_2$>이 된다. 일반적인 해법은 재귀를 사용하면 된다.
+
+```java
+public static List<Integer> grayCode(int numBits) {
+    if (numBits == 0) {
+        return new ArrayList<>(Arrays.asList(0));
+    }
+
+    // 암묵적으로 (numBits - 1)의 위치에서 0부터 시작한다.
+    List<Integer> grayCodeNumBitsMinus1 = grayCode(numBits - 1);
+
+    // 이제 (numBits - 1)의 비트-인덱스에 1을 추가한 뒤
+    // grayCodeNumBitsMinus1의 모든 엔트리에 이를 더해 준다.
+    int leadingBitOne = 1 << (numBits - 1);
+    // grayCodeNumBitsMinus1을 역순으로 순회하면서 처리한다.
+    for (int i = grayCodeNumBitsMinus1.size() - 1; i >= 0; --i) {
+        grayCodeNumBitsMinus1.add(leadingBitOne | grayCodeNumBitsMinus1.get(i));
+    }
+    return grayCodeNumBitsMinus1;
+}
+```
+
+정수의 범위 안에서 연산을 수행한다고 가정했을 때, $T(n) = T(n - 1) + O(2^{n-1})$이므로 시간 복잡도는 $O(2^n)$이 된다.
