--- a/java_epi/ch16/16.동적 프로그래밍.md
+++ b/java_epi/ch16/16.동적 프로그래밍.md
@@ -87,3 +87,67 @@ public static int findMaximumSubarray(List<Integer> A) {
 - 공간을 절약하기 위해 다시 사용하지 않게 될 **캐시 공간**을 **재사용**할 수도 있다. [문제 16.1, 16.2]
 - 가끔은 **상향식 동적 프로그래밍 해법보다 재귀가 더 효율적**일 때가 있다. 예를 들어 해법을 빨리 찾을 수 있거나 **가지치기**를 통해 탐색해야 할 부분 문제의 개수를 줄이는 경우다. [문제 16.5]
 - 동적 프로그래밍은 부분 문제에 대한 **해법을 결합**하여 원래 문제에 대한 **해법을 제시**한다. 하지만 동적 프로그래밍으로 풀 수 없는 문제도 있다. 예를 들어 중간 도시를 반복해서 경유하지 않도록, 도시 1에서 도시 2까지 가는 가장 긴 경로를 구해야 한다고 하자. 이 경로는 도시 3을 통과한다. 이때 도시 1에서 도시 3으로, 그리고 도시 3에서 도시 2로 가는 각각의 하위 경로는, 문제에서 요구했던 '중간 도시를 반복해서 경유하지 않는 가장 긴 경로'가 아닐 수도 있다.
+
+## 문제 16.1 가능한 점수가 몇 개인지 구하기
+
+미국 미식축구는 각 게임당 2점(세이프티), 3점(필드골), 7점(터치다운, 추가점수)을 낼 수 있다. 시합이 끝난 후 획득한 점수를 모두 합한 결과가 최종 점수가 된다. 예를 들어 12점을 내는 방법은 다음과 같이 네 가지 경우의 수가 존재한다.
+
+- 세이프티 6번(2 * 6 = 12)
+- 세이프티 3번과 필드골 2번(2 * 3 + 3 * 2 = 12)
+- 세이프티 1번과 필드골 1번, 터치다운 1번(2 * 1 + 3 * 1 + 7 * 1 = 12)
+- 필드골 4번 (3 * 4 = 12)
+
+최종 점수와 각 게임에서 낼 수 있는 점수가 주어졌을 때, 주어진 최종 점수를 만들 수 있는 조합의 개수를 반환하라.
+
+> 힌트: 점수 $w0$을 0번 냈을 때, 점수 $w0$를 1번 냈을 때 등의 조합의 개수를 세어 보라.
+
+낮은 점수를 통해 해법에 대한 감을 잡을 수 있다. 예를 들어 9점을 내는 경우는 다음과 같다.
+
+- 7점을 낸 다음에 2점을 내기
+- 6점을 낸 다음에 3점을 내기
+- 2점을 낸 다음에 7점을 내기
+
+이를 일반화해보면, s점수를 내는 방법은 s-2점을 낸 뒤에 2점을 내거나, s-3점을 낸 뒤에 3점을 내거나, s-7점을 낸 뒤에 7점을 내는 것이다. 이 방법을 통해 모든 가능한 점수의 수열을 재귀적으로 나열할 수 있다. 7점을 낸 뒤에 2점을 내도 9점이 되고, 2점을 낸 뒤에 7점을 내도 9점이 되므로 수열이 다르더라도 최종적으로 같은 점수를 만들 수 있다. 무식한 방법은 이 수열을 모두 나열한 뒤에 서로 다른 조합의 수열의 개수를 센다. 서로 다른 조합의 수열을 셀 때는 수열을 정렬하거나 해시 테이블을 사용할 수 있다.
+
+수열의 개수가 굉장히 많을 것이므로 이 방법의 시간 복잡도는 굉장히 높다. 우리가 원하는 건 단지 조합의 개수일 뿐이므로 조합을 모두 구하지 않고도 답을 얻을 수 있는 방법을 생각해 보자.
+
+예를 들어 최종 점수가 12점이고 각 경기에서 2점밖에 낼 수 없다면, 12점을 내는 방법은 한 가지뿐이다. 이제 각 경기에서 2점 혹은 3점을 낼 수 있다고 가정해 보자. 우리가 원하는 건 조합이므로 2점을 내는 경기는 3점을 내는 경기 전에 발생한다고 가정한다. 2점이 0번일 때 3점으로 12점을 만들 수 있는 경우의 수는 하나이다. 2점이 1번일 때 3점으로 12점을 만들 수 있는 경우의 수는 존재하지 않는다. (12 - 2는 3으로 나누어 떨어지지 않는다.) 2점이 2번일 때 3점으로 12점을 만들 수 있는 경우의 수는 존재하지 않는다. (12 - 2 * 2 또한 3으로 나누어 떨어지지 않는다.) 2점이 3번일 때 3점으로 12점을 만들 수 있는 경우의 수는 하나이다. (12 - 2 * 3은 3으로 나누어 떨어진다.) 여기에 7점을 추가해 보자. 그러면 2점과 3점의 경기로 12점을 만들거나 5점을 만드는 조합의 개수를 더해 주면 된다. (이들이 7점 경기를 추가했을 때 만들 수 있는 점수이다.)
+
+예를 들어, 각 경기 점수가 W[0], W[1], ..., W[n-1]이고 최종 점수가 s라고 가정하자. 앞에서 설명한 고지식한 접근법은 동일한 문제를 반복적으로 해결하기 때문에 일반적으로 지수적인(exponential) 복잡성을 가진다.
+
+이때 동적 프로그래밍을 사용하면 복잡도를 줄일 수 있다. 2차원 배열 A[i][j]에 W[0],W[1],...,W[i-1]의 조합으로 점수 j를 만들 수 있는 개수를 저장해 보자. 예를 들어 A[1][12]에는 2점과 3점으로 12점을 만들 수 있는 조합의 개수가 들어 있다. A[i+1],[j]는 단순하게 A[i][j] (즉, W[i+1]을 사용하지 않은 경우), A[i][j-W[i+1]] (W[i+1]을 한 번 사용한 경우), A[i][j-2W[i+1]] (W[i+1]을 두 번 사용한 경우) 등을 모두 더한 값이 된다.
+
+이 알고리즘을 구하려면 3중 루프를 사용해야 한다. 첫 번째 반복문은 구하고자 하는 점수, 두 번째 반복문은 각 게임의 점수가 될 것이다. i와 j가 주어졌을 때, 세 번째 반복문은 j/W[i] + 1번 반복한다. (예를 들어 j=10, i=1, W[i]=3일 때, 세 번째 반복문은 A[0][10], A[0][7], A[0][4], A[0][1]의 값을 살펴본다.) 따라서 세 번째 반복문은 반복 횟수의 상한이 s와 같다. 따라서 전체 시간 복잡도는 $O(sns) = O(s^2n)$이 된다. (첫 번째 반복문이 n, 두 번째 반복문이 s, 세 번째 반복문의 상한은 s이다.)
+
+A[i+1]의 행을 구하는 부분을 자세히 살펴보면, 좀 더 효율적으로 구할 수 있을 것 같다. 예를 들어 2점과 3점으로만 이루어진 게임을 생각해 보자. 2점 게임의 개수는 이미 구했다고 가정하자. 따라서 A[0]은 2점 게임의 결과를 포함한 행이 된다. 즉, A[0][j]는 2점으로 최종 점수 j를 만들 수 있는 조합의 개수이다. 여기에 3점 게임을 추가해서 최종 점수 12점을 만들 수 있는 조합의 개수는 A[0][0] + A[0][3] + A[0][6] + A[0][9] + A[0][12]와 같다. 2점과 3점 게임으로 최종 점수를 15점으로 만들 수 있는 조합의 개수는 A[0][0] + A[0][3] + A[0][6] + A[0][9] + A[0][12] + A[0][15]와 같다. 여기서 확실히 알 수 있는 건 A[0][0] + A[0][3] + A[0][6] + A[0][9] + A[0][12]를 다시 구하고 있다는 것이다. 이 점수는 최종 점수 12점을 구할 때 이미 계산했던 값이다.
+
+A[1][15] = A[0][15] + A[1][12]와 같다. 이 점을 이용하면 A[1]의 행을 좀 더 효율적으로 구할 수 있다.
+A[1][0] = A[0][0],
+A[1][1] = A[0][1],
+A[1][2] = A[0][2],
+A[1][3] = A[0][3] + A[1][0],
+A[1][4] = A[0][4] + A[1][1],
+A[1][5] = A[0][5] + A[1][2],
+...
+이 되므로 A[1][i] = A[0][i] + A[1][i-3]과 같다. 따라서 A[1][i]를 구하는 데 $O(1)$의 시간이 걸린다. 그림 16.3의 표를 살펴보길 바란다.
+
+다음은 이를 구현한 코드이다.
+
+```java
+public static int numCombinationsForFinalScore(int finalScore, List<Integer> individualPlayScores) {
+    int[][] numCombinationsForScore = new int[individualPlayScores.size()][finalScore + 1];
+    for (int i = 0; i < individualPlayScores.size(); i++) {
+        numCombinationsForFinalScore[i][0] = 1; // 0점이 될 수 있는 방법의 개수
+        for (int j = 1; j <= finalScore; j++) {
+            int withoutThisPlay = i - 1 >= 0 ? numCombinationsForScore[i - 1][k] : 0;
+            int withThisPlay = j >= individualPlayScores.get(i)
+                                    ? numCombinationsForScore[i][j - individualPlayScores.get(i)]
+                                    : 0;
+            numCombinationsForScore[i][j] = withoutThisPlay + withThisPlay;
+        }
+    }
+    return numCombinationsForScore[individualPlayScores.size() - 1][finalScore];
+}
+```
+
+시간 복잡도는 $O(sn)$이다(하나는 s, 다른 하나는 n인 반복문 두 개). 공간 복잡도 또한 $O(sn)$이다(2차원 배열 크기).
