--- a/java_epi/ch17/17.그리디 알고리즘과 불변식.md
+++ b/java_epi/ch17/17.그리디 알고리즘과 불변식.md
@@ -43,3 +43,45 @@ public static int changeMaking(int cents) {
 - 그리디 방법이 최적 해법을 찾지 못하더라도, 최적 알고리즘을 찾는 통찰력 혹은 휴리스틱에 대한 힌트가 될 수 있다.
 - 때로는 어떤 그리디 알고리즘을 선택해야 올바른지 **명확하지 않은** 경우도 있다.
 
+## 문제 17.1 최적의 업무 할당 구하기
+
+노동자에게 업무를 할당하는 문제에 관해 생각해 보자. 각 노동자는 정확히 두 개의 업무를 할당받아야 한다. 각 업무를 완료하는 데 걸리는 시간은 고정되어 있으며, 각 업무는 서로 독립적이다. "3번 업무가 끝나기 전에 4번 업무를 수행할 수 없다"와 같은 제약사항은 없다. 누구나 어떤 업무든 할당받을 수 있다.
+
+모든 업무를 완료하는 데 걸리는 시간이 최소가 되도록 노동자에게 업무를 할당해야 한다. 예를 들어 각각 5,2,1,6,4,4 시간이 걸리는 6개의 업무가 있을 때, 이를 최적으로 할당하는 방법은 처음 두 업무(5시간, 2시간짜리 업무)를 첫 번째 노동자에게 할당하고, 그 다음 두 업무(1시간, 6시간짜리 업무)를 두 번째 노동자에게 할당하고, 그 다음 두 업무(4시간, 4시간짜리 업무)를 세 번째 노동자에게 할당하는 것이다. 이렇게 하면, 모든 업무를 완료하는 데 걸리는 시간은 max(5 + 2, 1 + 6, 4 + 4) = 8시간이 된다.
+
+업무 집합이 입력으로 주어졌을 때, 최적 할당을 반환하는 알고리즘을 설계하라.
+
+> 힌트: 가장 오랜 시간이 걸리는 업무를 할당받은 노동자에게, 얼마만큼의 시간이 필요한 업무를 두 번째로 할당하는 것이 좋을까?
+
+모든 가능한 업무의 쌍을 나열하는 방법은 실행 불가능하다. 그러한 쌍의 개수가 너무 많기 때문이다(n개의 업무가 있을 떄 정확히 $\binom{n}{2}\binom{n-2}{2}\binom{n-4}{2}...\binom{4}{2}\binom{2}{2} = n!/2^{n/2}$의 개수가 존재한다).
+
+이 문제의 구조를 좀 더 자세히 살펴보자. 극단적인 값을 잘 처리하는 게 중요하다. 가장 오래 걸리는 일은 그만큼 많은 도움이 필요하다. 특히, 가장 오래 걸리는 업무를, 가장 빨리 끝낼 수 있는 업무와 쌍으로 묶는 것이 타당해 보인다. 이 사실은 가장 오래 걸리는 업무를 그 외의 업무와 쌍을 이루도록 할당했을 때와 비교해보면 알 수 있다. 가장 긴 시간이 걸리는 업무와 가장 짧은 시간이 걸리는 업무를 쌍으로 묶으면 최소한 더 좋은 결과를 얻을 수 있다.
+
+물론 가장 오래 걸리는 업무와 가장 짧게 걸리는 업무의 합이 늘 최적이 되는 건 아니다. 가장 긴 업무 두 개는 걸리는 시간이 비슷하지만, 가장 짧은 업무 두 개는 걸리는 시간이 많이 차이 나는 경우를 생각해 보면 쉽다. 예를 들어 업무에 걸리는 시간이 각각 1,8,9,10인 경우 모든 업무를 마치는 데 걸리는 시간은 1+10이 아니고 8+9=17이다.
+
+결론적으로 업무에 걸리는 시간순으로 정렬한 뒤, 가장 짧게 걸리는 업무와 가장 오래 걸리는 업무끼리 차례대로 쌍으로 묶어 주면 된다. 예를 들어 업무에 걸리는 시간이 각각 5,2,1,6,4,4라고 하자. 이를 정렬하면 1,2,4,4,5,6이 되고, 따라서 (1,6),(2,5),(4,4)를 쌍으로 묶어주면 된다.
+
+```java
+private static class PairedTasks {
+    public Integer task1;
+    public Integer task2;
+
+    public PairedTasks(Integer task1, Integer task2) {
+        this.task1 = task1;
+        this.task2 = task2;
+    }
+}
+
+public static List<PairedTasks> optimumTaskAssignment(List<Integer> taskDurations) {
+    Collections.sort(taskDurations);
+    List<PairedTasks> optimumAssignments = new ArrayList<>();
+    for (int i = 0, j = taskDurations.size() - 1; i < j; i++,j--) {
+        optimumAssignments.add(
+            new PairedTasks(taskDurations.get(i), taskDurations(j))
+        );
+    }
+    return optimumAssignments;
+}
+```
+
+시간 복잡도는 정렬하는 데 걸리는 시간인 $O(n \log n)$과 같다.
