--- a/java_epi/ch17/17.그리디 알고리즘과 불변식.md
+++ b/java_epi/ch17/17.그리디 알고리즘과 불변식.md
@@ -167,3 +167,77 @@ public static Integer findMinimumVisits(List<Interval> intervals) {
 ```
 
 각 인덱스에서 걸린 시간은 $O(1)$이므로 정렬을 한 이후에 걸린 시간은 총 $O(n)$이다. 여기서 n의 구간은 개수이다. 하지만 그전에 정렬을 해야 하므로 이 알고리즘의 전체 시간 복잡도는 정렬을 하는 데 필요한 $O(n \log n)$과 같다.
+
+## 불변식
+
+> 효과적인 알고리즘을 설계하는 일반적인 방법은 불변식(invariants)을 사용하는 것이다. 불변식은 간단히 말하면, 프로그램이 실행되는 동안 참인 조건을 뜻한다. 이 조건은 프로그램의 변수 값이나 제어 논리에 있을 수 있다.
+
+불변식을 잘 선택하면 차선책이나 다른 방법에 의존하는 해법들을 배제하여 좀 더 최적의 해결책을 찾을 수 있다.
+
+예를 들어 이진탐색은 알고리즘이 실행되는 동안 모든 가능한 후보자를 고려한다는 불변식을 유지한다.
+
+정렬 알고리즘은 불변식을 사용한 알고리즘 설계를 잘 보여준다. 선택 정렬을 예로 들어 보자. 선택 정렬은 가장 작은 원소를 차례대로 찾은 뒤 그들을 올바른 위치로 옮기는 과정을 반복한다. 0번 인덱스에서 시작하는 부분배열의 크기를 점차 키워가면서 해당 부분배열이 언제나 정렬되어 있다는 불변식을 유지하고 있는 셈이다. 따라서 불변식을 만족하는 부분배열의 원소는 나머지 원소보다 작거나 같고, 전체 배열은 기존 배열을 재배열한 결과와 같다.
+
+더 복잡한 예제를 다뤘던 문제 14.7의 해법을 생각해 보자. 이 방법은 $a + b\sqrt{2}$꼴을 만족하는 첫 k개의 숫자를 $O(k)$ 시간에 찾는다. 이 해법의 핵심은 이러한 숫자를 정렬된 순서대로 처리한다는 점이다. 코드에 나와 있는 큐는 여러 가지 불변식을 만족하는데, 예를 들어 큐 안의 원소들은 정렬되어 있고 중복된 원소가 있어선 안 되며, 원소 사이의 분리는 제한적이라는 것이다.
+
+### 불변식 부트 캠프
+
+정렬된 배열과 숫자 하나가 주어졌을 때 배열 안의 숫자 두 개를 더해서 주어진 숫자를 만들 수 있는지 확인하는 프로그램을 작성한다고 해 보자. 예를 들어 <-2,1,2,4,7,11>이 주어졌을 때, 해당 배열의 숫자 두 개를 더해서 6,0,13은 만들 수 있지만 10은 만들 수 없다.
+
+이 문제를 푸는 방법은 여러 가지다. 그중 하나는 모든 쌍을 순회하거나 주어진 숫자에서 해당 항목을 뺀 값이 배열의 원소에 존재하는지 찾는 것이다. 가장 효율적인 방법은 불변식을 사용하는 것이다. 해법이 존재한다면, 해법이 항상 존재하는 부분배열을 찾는다. 부분배열은 처음에 전체배열로 초기화되고, 한쪽 또는 다른 쪽부터 반복해서 줄어든다. 축소는 배열의 정렬을 사용하는데, 가장 왼쪽 값과 가장 오른쪽 값을 더한 값이 대상보다 작다면 가장 왼쪽 값은 배열의 다른 어떤 원소와 더하더라도 대상 값을 만들 수 없다. 오른쪽 끝 원소에 대해서도 비슷한 논리를 적용할 수 있다.
+
+```java
+public static boolean hasTwoSum(List<Integer> A, int t) {
+    int i = 0, j = A.size() - 1;
+    while(i <= j) {
+        if (A.get(i) + A.get(j) == t) {
+            return true;
+        } else if (A.get(i) + A.get(j) < t) {
+            ++i;
+        } else { // A[i] + A[J] > t
+            --j;
+        }
+    }
+    return false;
+}
+```
+
+배열의 길이가 n일 때 시간 복잡도는 $O(n)$이다. 변수 두 개로 부분배열을 표현할 수 있으므로 공간 복잡도는 $O(1)$이다.
+
+### 불변식 문제를 풀기 전 꼭 알고 있어야 할 내용
+
+- 알고리즘을 설계할 때, 불변식 사용 여부를 결정하는 핵심 전략은 **작은 예제**를 통해 불변식의 가설이 맞는지 확인하는 것이다. [문제 17.4, 문제 17.6]
+- 종종 불변식은 가능한 입력 집합의 부분 집합(예를 들어 부분배열)이 된다. [문제 17.4, 문제 17.7]
+
+## 문제 17.4 세 개의 원소를 합해 원하는 숫자를 얻을 수 있는지 확인하기
+
+배열과 숫자 하나가 주어졌을 떄, 배열 안의 원소 세 개를 더해서 주어진 숫자를 만들 수 있는지 확인하는 알고리즘을 설계하라. 배열 안의 원소는 중복이 가능하다. 예를 들어 <11,2,5,7,3>이 있을 때, 3,7,11 혹은 5,5,11을 합하면 21을 만들 수 있다. 21을 만들 때 5를 두 번 사용한 것처럼, 같은 원소를 여러 번 사용해도 된다. 하지만 어떤 세 원소를 더하더라도 22를 만들 수는 없다.
+
+> 힌트: 두 개 이상의 원소를 더해서 주어진 숫자가 되는지 확인하려면 어떻게 해야 할까?
+
+무식한 방법은 삼중 루프를 사용해서 모든 가능한 경우를 살펴보는 것이다. 배열의 길이가 n일 때 이 방법의 시간 복잡도는 $O(n^3)$이고 공간 복잡도는 $O(1)$이다.
+
+입력 배열을 A, 주어진 숫자를 t라고 하자. 배열의 원소를 해시테이블에 저장하면 알고리즘의 시간 복잡도를 $O(n^2)$까지 개선할 수 있다. 그다음 원소쌍을 순회하면서 $A[i] + A[j]$에 대해 $t - (A[i] + A[j])$가 해시테이블에 있는지 확인하면 된다. 공간 복잡도는 $O(n)$이 필요하다.
+
+입력 배열을 정렬하면 추가 공간 복잡도를 사용하지 않을 수 있다. A를 정렬한 뒤 A[i]에 대해서 $A[j] + A[k] = t - A[i]$를 만족하는 j와 k를 찾으면 된다. A[j]를 순회하는 동시에 이진 탐색을 사용해서 A[k]를 찾으면 $O(n \log n)$에 j와 k를 찾을 수 있다.
+
+A[0] + A[n - 1]에서 시작하면 시간 복잡도를 $O(n)$으로 개선할 수 있다. 만약 이 값이 t - A[i]와 같다면 여기서 바로 끝낸다. 만약 A[0] + A[n-1] < t - A[i]라면 A[1] + A[n-1]로 옮겨 간다. 왜냐하면 A[n-1]이 배열 A에서 가장 큰 값이므로 A[0]과 쌍을 이루어서 t-A[i]를 만족할 수 없기 때문이다. 비슷하게 A[0] + A[n-1] > t - A[i]라면, A[0] + A[n-2]로 넘어간다. 이 방법은 반복적으로 원소를 하나씩 제거해 나간다. 매번 $O(1)$ 시간을 사용하므로 A[j] + A[k] = t - A[i]를 만족하는 A[j]와 A[k]를 찾는 데 $O(n)$ 시간이 걸린다. 여기서 원하는 값을 원소 두 개의 합으로 만들 수 있으려면, 현재의 부분배열 안에 반드시 그 두 개의 원소가 존재해야 한다.
+
+앞의 예제에서 배열을 정렬하면 <2,3,5,7,11>이 된다. A[0] = 2에 대해 A[0] + A[j] + A[k] = 21이 되는 A[j]와 A[k]를 찾으려면 두 원소의 합이 21-2=19가 되는 j와 k를 찾으면 된다.
+
+다음은 이를 구현한 코드이다.
+
+```java
+public static boolean hasThreeSum(List<Integer> A, int t) {
+    Collections.sort(A);
+    for (Integer a : A) {
+        // 두 원소의 합이 t - a가 되는 원소가 A에 있는지 확인한다.
+        if (TwoSum.hasTwoSum(A, t - a)) {
+            return true;
+        }
+    }
+    return false;
+}
+```
+
+추가 공간 복잡도는 $O(1)$이다. 전체 시간 복잡도는 우선 정렬에 $O(n \log n)$ 시간이 소요된다. 그다음 정렬된 배열에서 두 원소의 합이 특정값이 되는지 확인하는 $O(n)$을 n번 수행하므로 $O(n^2)$이 된다.
