--- a/java_epi/ch17/17.그리디 알고리즘과 불변식.md
+++ b/java_epi/ch17/17.그리디 알고리즘과 불변식.md
@@ -284,3 +284,37 @@ public static String majoritySearch(Iterator<String> inputStream) {
 각 엔트리를 처리하는 데 $O(1)$의 시간을 사용하므로 전체 시간 복잡도는 $O(n)$이다. 추가 공간 복잡도는 $O(1)$이다.
 
 앞의 코드는 다수 원소가 언제나 존재한다는 가정하에 동작한다. 만약 다수 원소가 존재하지 않는다면, 앞에서 반환하는 결과는 아무 의미 없는 결과일 것이다. 마지막에 한 번 더 입력을 읽으면서 해당 단어가 다수 원소인지 확인하는 과정을 넣을 수도 있다. 문제 24.33에서도 이야기했듯이, 입력에서 n/k번보다 많이 등장하는 원소를 찾을 때도 비슷한 방법을 사용하면 된다.
+
+## 문제 17.6 주유소 문제
+
+모든 도시를 방문한 뒤 시작 도시로 되돌아오려 한다. 도시는 환형으로 연결되어 있고, 각 도시에서는 특정 양의 가스를 구할 수 있다. 모든 도시에서 얻을 수 있는 가스의 총 양은 환형 도로를 한 번 순회하는 데 필요한 가스의 양과 같다. 가스 탱크는 무제한이라고 가정한다. 어떤 도시에서 가스 탱크가 비어 있는 상태로 시작해 환형 도로를 한 번 순회한 다음, 다시 해당 도시로 돌아올 수 있으면 그 도시를 '풍부한(ample) 도시'라고 하자. 그림 17.2에 예제가 표시되어 있다.
+
+주유소 문제에서 어떻게 하면 풍부한 도시를 효율적으로 찾을 수 있을까? 풍부한 도시는 반드시 존재한다고 가정해도 좋다.
+
+> 힌트: 가스를 충분히 채운 상태에서 한 바퀴 순회한다고 생각해 보라. 그리고 도로를 순회하면서 사용한 가스의 양과 각 도시에서 채울 수 있는 가스의 양을 추적해 보라.
+
+무식한 방법은 각 도시에서 시작해서 도로를 순회해 보는 것이다. 도시가 n개일 때 이 방법의 시간 복잡도는 $O(n^2)$이다.
+
+다음과 같은 그리디 알고리즘을 생각해 볼 수도 있다. 예를 들어 가스를 가장 많이 얻을 수 있는 도시에서 시작하거나, 그 다음 도시와 가장 가까운 도시에서 시작해 보는 것이다. 하지만 전부 올바른 방법이 아니다. 앞의 예제를 살펴보자. A 도시에서 가스를 가장 많이 구할 수 있지만 C 도시에 도달할 수 없다. G 도시에서 그 다음인 A 도시까지 가장 가깝고, 거리-가스 비율(100/10)이 가장 좋지만 D 도시에 도달할 수 없다.
+
+도시 간 도로를 순회하면서 사용한 가스의 양을 그래프로 그려 보면 어떤 통찰을 얻을 수 있을 것이다. 앞의 예제를 그래프로 표현한 그림 17.3을 살펴보자. 가스 탱크에 들어 있는 가스의 양은 음수가 될 수 있지만 물리적으로 불가능한 것은 무시하기로 한다. 이 그래프는 X축을 기준으로 환형 시프트를 하거나 Y축을 기준으로 위아래로 위아래로 옮겨도 동일한 그래프가 된다.
+
+진입 당시의 가스 양이 최소가 되는 도시를 살펴보자. 어느 도시에서 출발했는지와 상관없이 가스 양이 최소가 되는 도시는 항상 동일하다. 왜냐하면 이 그래프는 양옆으로 환형 시프트를 하거나 위아래로 옮겨도 동일하기 때문이다. 진입 당시의 가스 양이 최소가 되는 도시를 z라 하자. 여기서 진입 당시의 가스 양이란, 도시에 도착해서 주유를 하기 전의 가스 양을 뜻한다. z에서 시작한 것보다 가스의 양이 더 적은 적이 없었고 z로 돌아갔을 때 가스의 양이 0이 되므로(즉, 도로를 순환하는 데 필요한 전체 가스의 양이 충분하므로) 가스가 바닥나기 전에 도로를 순환할 수 있다. 단, 풍부한 도시가 항상 존재한다는 가정이 있을 때에만 이 논리가 가능하다.
+
+모든 도시를 통과하면서 가스 양의 변화를 시뮬레이션하면 진입 당시 가스 양이 최소가 되는 도시 z를 쉽게 구할 수 있다.
+
+```java
+private static class CityAndRemainingGas {
+    public Integer city;
+    public Integer remainingGallons;
+
+    public CityAndRemainingGas(Integer city, Integer remainingGallons) {
+        this.city = city;
+        this.remainingGallons = remainingGallons;
+    }
+}
+
+private static final int MPG = 20;
+```
+
+시간 복잡도는 $O(n)$이고 공간 복잡도는 $O(1)$이다.
