--- a/java_epi/ch18/18.그래프.md
+++ b/java_epi/ch18/18.그래프.md
@@ -175,3 +175,79 @@ private static boolean isFeasible(Coordinate cur, List<List<Color>> maze) {
 ```
 
 시간 복잡도는 깊이 우선 탐색과 같다. $O(|V| + |E|)$이다.
+
+## 문제 18.2 불 행렬 색칠하기
+
+흑백 사진으로 이루어진 2차원 불 배열 A가 있다고 하자. A(a,b)는 (a,b) 픽셀의 색깔을 말한다. 두 픽셀이 사방으로 연결되어 있다면(즉 왼쪽, 오른쪽, 위, 아래와 연결되어 있는 경우) 이 둘을 인접했다고 말한다. 이 정의에 따르면 픽셀 하나는 최대 네 개의 픽셀과 인접할 수 있다. 또한 이 인접 관계는 대칭성을 띈다. 즉, $e_0$이 $e_1$과 인접한다면 $e_1$도 $e_0$과 인접한다.
+
+$e_0$에서 $e_1$로의 경로는 인접한 픽셀을 따라서 나타낼 수 있으며, $e_0$에서 시작해서 $e_1$로 끝나는 경로를 말한다. 경로상의 연속된 픽셀들은 서로 인접해야 한다. 어떤 지점 $(i,j)$에서 인접한 모든 지점 $(i', j')$의 색깔이 같다면 이를 하나의 지역이라고 말할 수 있다. 특히, 이것은 $(i,j)$와 $(i',j')$가 같은 색이어야 함을 의미한다.
+
+$n \times m$의 불 배열 A와 (x,y)가 주어졌을 때, (x,y)와 연관된 지역의 색깔을 바꾸는 루틴을 구현하라. 그림 18.6에 색깔을 바꾼 예제가 나와 있다.
+
+> 힌트: 개념적으로 문제를 푼 뒤에 최적화된 구현 방법에 대해 생각해 보라.
+
+문제 18.1의 해법을 통해 그래프 탐색을 하면, 모든 경우를 나열하거나 무작위로 탐색을 했을 때의 천문학적인 복잡도를 극복할 수 있다는 사실을 알았다. 여기서는 각 픽셀을 노드로 생각하고 인접한 픽셀을 연결된 간선으로 생각하자.
+
+이 문제에서는 (x,y)와 동일한 색깔이면서 (x,y)에서 도달 가능한 모든 노드를 찾고 싶어 한다. 시작 노드가 여러 개라면 너비 우선 탐색이 더 낫다. 노드들은 큐에 저장하면 된다.
+
+큐를 (x,y)로 초기화한 뒤, 반복적으로 원소를 꺼낸다. 꺼낸 원소인, 픽셀 지점 p를 처리한다. 먼저, p의 초기 색깔을 기록하고 그 색깔을 뒤집는다. 그 다음에 p의 인접한 픽셀들을 살펴본다. p의 초기 색깔과 동일한 색깔인 이웃들은 다시 큐에 추가한다. 그리고 큐가 빌 때까지 이를 반복한다. 큐에 삽입된 모든 지점은 (x,y) 에서 도달 가능하고 모두 같은 색깔로 이루어져 있다. 그리고 (x,y)와 색깔이 동일하면서 도달 가능한 모든 지점은 결국 큐에 삽입된다. 따라서 이 알고리즘은 올바르게 동작한다고 말할 수 있다.
+
+```java
+private static class Coordinate {
+    public Integer x;
+    public Integer y;
+
+    public Coordinate(Integer x, Integer y) {
+        this.x = x;
+        this.y = y;
+    }
+}
+
+public static void flipColor(List<List<Boolean>> A, int x, int y) {
+    final int[][] DIRS = {{0,1},{0,-1},{1,0},{-1,0}};
+    boolean color = A.get(x).get(y);
+
+    Queue<Coordinate> q = new LinkedList<>();
+    A.get(x).set(y, !A.get(x).get(y)); // 색깔을 뒤집는다.
+    q.add(new Coordinate(x,y));
+    while (!q.isEmpty()) {
+        Coordinate curr = q.element();
+        for (int[] dir : DIRS) {
+            Coordinate next = new Coordinate(curr.x + dir[0], curr.y + dir[1]);
+            if (next.x >= 0 && next.x < A.size() && next.y >= 0 && next.y < A.get(next.x).size()
+                && A.get(next.x).get(next.y) == color)
+            {
+                // 색깔을 뒤집는다.
+                A.get(next.x).set(next.y, !color);
+                q.add(next);
+            }
+        }
+        q.remove();
+    }
+}
+```
+
+시간 복잡도는 너비 우선 탐색과 같고 $O(mn)$이 된다. 공간 복잡도는 최악의 경우의 너비 우선 탐색보다 좀 낫다. 특정 시점에 주어진 지점과 거리가 같은 노드는 최대 $O(m + n)$이므로 공간 복잡도 또한 $O(m + n)$이 된다.
+
+깊이 우선 탐색을 사용해서 재귀적인 해법을 구현할 수도 있다. 큐를 사용할 필요가 없지만 함수 호출 스택을 암묵적으로 사용한다.
+
+```java
+public static void flipColor(List<List<Coordinate>> A, int x, int y) {
+    final int[][] DIRS = {{0,1},{0,-1},{1,0},{-1,0}};
+    boolean color = A.get(x).get(y);
+
+    A.get(x).set(y, !color); // 색깔을 뒤집는다.
+    for (int[] dir : DIRS) {
+        int nextX = x + dir[0], nextY = y + dir[1];
+        if (nextX >= 0 && nextX < A.size() && nextY >= 0 && nextY < A.get(nextX).size()
+            && A.get(nextX).get(nextY) == color)
+        {
+            flipColor(A, nextX, nextY);
+        }
+    }
+}
+```
+
+시간 복잡도는 깊이 우선 탐색과 동일하다.
+
+앞의 두 알고리즘은 전통적인 너비 우선 탐색과 깊이 우선 탐색 알고리즘과는 조금 다르다. 왜냐하면 배열으 통해 색깔 정보를 얻어낼 수 있으므로, 일반적인 방법처럼 너비 우선 탐색과 깊이 우선 탐색의 노드에 색깔 정보를 넣지 않아도 되기 때문이다. 또한 단순히 도달 가능성만 확인하므로 두 가지 색깔만 사용하는 반면에, 너비 우선 탐색과 깊이 우선 탐색은 전통적으로 세 가지 색깔을 사용해서 그 상태를 기록한다. (예를 들어 방향 그래프에서 사이클을 확인하기 위해 추가 색깔을 사용할 수는 있지만 이 문제와는 관련이 없다.)
