--- a/java_epi/ch18/18.그래프.md
+++ b/java_epi/ch18/18.그래프.md
@@ -251,3 +251,91 @@ public static void flipColor(List<List<Coordinate>> A, int x, int y) {
 시간 복잡도는 깊이 우선 탐색과 동일하다.
 
 앞의 두 알고리즘은 전통적인 너비 우선 탐색과 깊이 우선 탐색 알고리즘과는 조금 다르다. 왜냐하면 배열으 통해 색깔 정보를 얻어낼 수 있으므로, 일반적인 방법처럼 너비 우선 탐색과 깊이 우선 탐색의 노드에 색깔 정보를 넣지 않아도 되기 때문이다. 또한 단순히 도달 가능성만 확인하므로 두 가지 색깔만 사용하는 반면에, 너비 우선 탐색과 깊이 우선 탐색은 전통적으로 세 가지 색깔을 사용해서 그 상태를 기록한다. (예를 들어 방향 그래프에서 사이클을 확인하기 위해 추가 색깔을 사용할 수는 있지만 이 문제와는 관련이 없다.)
+
+## 문제 18.3 닫힌 지역 찾기
+
+이 문제에서는 2차원 격자판에서 닫힌 지역을 찾는다. 닫힌 지역의 뜻은 그림 18.7의 설명을 통해 알 수 있다.
+
+이 문제는 2차원 배열에 B(검은색)와 W(흰색)을 사용해서 구할 수 있다. 그림 18.7(a)는 다음과 같이 구성할 수 있다.
+
+$A = \begin{bmatrix}
+    B & B & B & B\\
+    W & B & W & B\\
+    B & W & W & B\\
+    B & B & B & B
+  \end{bmatrix}$
+
+그림 18.7(b)는 다음과 같이 구성할 수 있다.
+
+$B = \begin{bmatrix}
+    B & B & B & B\\
+    W & B & B & B\\
+    B & B & B & B\\
+    B & B & B & B
+  \end{bmatrix}$
+
+2차원 배열 A는, W혹은 B로 구성되어 있다고 하자. A가 주어졌을 때 경계 지점에 도달할 수 없는 모든 W를, B로 바꾸는 프로그램을 작성하라.
+
+> 힌트: 우리가 원한느 결과의 정반대를 구하는 것이 더 쉬울 수 있다.
+
+우선 이 문제의 역(inverse)에 초점을 맞추어 보자. 즉, 경계 지점에 도달할 수 있는 W를 찾는 것이다. 왜냐하면 경계 지점에 도달할 수 있는 W와 인접한 W의 역이 경계 지점에 도달할 수 있기 때문이다. 따라서 경계 지점에 인접한 W들이 초기 집합이 된다. 그 뒤 이들과 인접한 W를 찾고 반복적으로 이 집합을 늘려나간다. 경계 지점에서 도달 가능한 W를 찾을 때마다 이를 기록하고 그 다음 인접한 W를 찾는다. 처리할 W를 기록하는 데는 큐가 적합할 것이다. 이 방법은 단일 노드에서 시작하는 것이 아니라 어떤 노드 집합에서 시작하는 너비 우선 탐색이 된다.
+
+```java
+public static void fillSurroundedRegions(List<List<Character>> board) {
+    // 첫 번째 또는 마지막 열에서 시작해서 흰색 경로를 통해 도달 가능한 지역을 찾는다.
+    for (int i = 0; i < board.size(); i++) {
+        if (board.get(i).get(0) == 'W') {
+            markBoundaryRegion(i, 0, board);
+        }
+        if (board.get(i).get(board.get(i).size() - 1) == 'W') {
+            markBoundaryRegion(i, board.get(i).size() - 1, board);
+        }
+    }
+    // 첫 번째 또는 마지막 행에서 시작해서 흰색 경로를 통해 도달 가능한 지역을 찾는다.
+    for (int j = 0; j < board.get(0).size(); j++) {
+        if (board.get(0).get(j) == 'W') {
+            markBoundaryRegion(0, j, board);
+        }
+        if (board.get(board.size() - 1).get(j) == 'W') {
+            markBoundaryRegion(board.size() - 1, j, board);
+        }
+    }
+
+    // 인접한 흰색 지역을 검은색으로 칠한다.
+    for (int i = 0; i < board.size(); i++) {
+        for (int j = 0; j < board.size(); j++) {
+            board.get(i).set(j, board.get(i).get(j) != 'T' ? 'B' : 'W');
+        }
+    }
+}
+
+private static class Coordinate {
+    public Integer x;
+    public Integer y;
+
+    public Coordinate(Integer x, Integer y) {
+        this.x = x;
+        this.y = y;
+    }
+}
+
+private static void markBoundaryRegion(int i, int j, List<List<Character>> board) {
+    Queue<Coordinate> q = new ArrayDeque<>();
+    q.add(new Coordinate(i, j));
+    // 너비 우선 탐색을 사용해서 지역을 찾는다.
+    while (!q.isEmpty()) {
+        Coordinate curr = q.poll();
+        if (curr.x >= 0 && curr.x < board.size() && curr.y >= 0 && curr.y < board.get(curr.x).size()
+            && board.get(curr.x).get(curr.y) == 'W')
+        {
+            board.get(curr.x).set(curr.y, 'T');
+            q.add(new Coordinate(curr.x - 1, curr.y));
+            q.add(new Coordinate(curr.x + 1, curr.y));
+            q.add(new Coordinate(curr.x, curr.y - 1));
+            q.add(new Coordinate(curr.x, curr.y + 1));
+        }
+    }
+}
+```
+
+시간 및 공간 복잡도는 너비 우선 탐색과 같은 $O(mn)$이다. 여기서 m은 A의 행, n은 열을 나타낸다.
